--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,10 @@
 # --- For-Bot-Working --------- #
-pyrogram>=2.0.30
-TgCrypto
-pyromod==1.5
+pyrogram
+pyromod
 # --- For-Database ------------ #
-pymongo[srv]==3.12.3
+pymongo
 dnspython
 # --- For-Web-Response ------- #
 aiohttp
 requests
 bs4
-# --- For-Link-Shortner ------- #
-pyshorteners
-pytz
